fix overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -248,10 +248,11 @@ textarea.input {
     position: fixed;
     top: 0;
     left: 0;
-    min-height: 100%;
+    height: 100%;
     z-index: 50;
     transform: translateX(-100%);
     transition: transform 0.3s;
+    overflow: auto;
   }
   .menu-open .aside {
     transform: translateX(0%);
